src/objects/BGCK__Choice__c.object
<CustomObject>
    <fields>
        <fullName>BGCK__Answer_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Option</label>
        <referenceTo>BGCK__Answer_Type__c</referenceTo>
        <relationshipLabel>Choices</relationshipLabel>
        <relationshipName>Choices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Display_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Display Value</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BGCK__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Choices will be sorted by the value in this field, then alphabetically</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCK__Question_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Type</label>
        <referenceTo>BGCK__Question_Type__c</referenceTo>
        <relationshipLabel>Choices</relationshipLabel>
        <relationshipName>Choices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Track_No__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_ID_of_Question_type__c</fullName>
        <formula>BGCK__Question_Type__r.External_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID of Question type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WADOL_Mulesoft_Ext_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Mulesoft Ext Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Choice</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Choices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>